LATEST 
----------------------------------
- translationxml export: distinguish between CLASS and STRUCTURE
- translationxml export: sort elements according to scoped name, but ignore case (same as in MS-Excel)
- ModelDef: keep ordering of translations
- INTERLIS2Def dialog: keep ordering of translations
- ili export: fix missing version in TRANSLATION OF
- ili2c-5.2.3+

UML-Editor 3.7.6 (2020-12-28) 
----------------------------------
- ili2c-5.1.5

UML-Editor 3.7.5 (2020-10-27) 
----------------------------------
- fixed Opening existing .uml files does not work (#43)
- ili2c-5.1.4

UML-Editor 3.7.4 (2020-09-29) 
----------------------------------
- avoid collapse of navigation tree on element removal (#31)
- avoid removal of class figure on move of class
- support drag and drop of attributes (#29)
- support drag and drop of enumeration elements (#30)
- ili2c-5.1.3

UML-Editor 3.7.3 (2020-05-04) 
----------------------------------
- export ili file as UTF-8 encoded (#32)
- ili2c-5.1.1

UML-Editor 3.7.2 (2020-03-02) 
----------------------------------
- iliimport: extend trace output (#28)
- fails to import EXTENDED attr without type (#28)
- ili2c-5.0.8


UML-Editor 3.7.1 (2020-03-02) 
----------------------------------
- fix commit f6365559fc5ff7b3603e2524255a0367a0e87d08
- GeoIV-ID wird nicht exportiert (#27)
- fix program version in about dialog
- Write models of the IMPORTS-statement in a defined order (#26)
- Write topics of the DEPENDS-statement in a defined order
- ili2c-5.0.6

UML-Editor 3.7.0 (2018-12-28) 
----------------------------------
- navigation view: enable drag and drop
- navigation view: new function to export a single ili file
- AttributeDef UI: enable to edit EPSG code
- DomainDef UI: enable to edit EPSG code
- UI: set default filter in file selection dialogs
- UI: enable ESCAPE key in dialogs
- UI: enable search button
- new function to export model as XMI file
- new function to import a translation XML