@@ -149,7 +149,6 @@ public class LauncherView extends BaseFrame implements MetaModelListener, Drawin
 	private JMenuItem ivjMniImportInterlis = null;
 	private JMenuItem ivjMniNewFile = null;
 	private JMenuItem ivjMniXmlExport = null;
-	private JMenuItem ivjMniChangeLanguage = null;
 	private JMenu ivjMnuInterlisTools = null;
 	private JMenu ivjMnuTranslationTools = null;
 	private JMenu ivjMnuSymbollists = null;
@@ -210,8 +209,6 @@ class IvjEventHandler implements ch.softenvironment.view.SimpleEditorPanelListen
 				connEtoC39(e);
 			if (e.getSource() == LauncherView.this.getMniExportXmi())
 				connEtoC42(e);
-			if (e.getSource() == LauncherView.this.getMniChangeLanguage())
-				connEtoC44(e);
 		};
 		public void itemStateChanged(java.awt.event.ItemEvent e) {
 			if (e.getSource() == LauncherView.this.getMncToolbar())
@@ -1106,13 +1103,6 @@ private void connEtoC42(java.awt.event.ActionEvent arg1) {
 	}
 }
 
-private void connEtoC44(java.awt.event.ActionEvent arg1) {
-	try {
-		LanguageGUI languageGui = new LanguageGUI(getInstance(), "Language", true);
-	} catch (java.lang.Throwable ivjExc) {
-		handleException(ivjExc);
-	}
-}
 /**
  * connEtoC5:  (addClass3.action.actionPerformed(java.awt.event.ActionEvent) --> LauncherView.addProject()V)
  * @param arg1 java.awt.event.ActionEvent
@@ -1907,23 +1897,6 @@ private javax.swing.JMenuItem getMniHelp() {
 	return ivjMniHelp;
 }
 
-private javax.swing.JMenuItem getMniChangeLanguage() {
-	if (ivjMniChangeLanguage == null) {
-		try {
-			ivjMniChangeLanguage = new javax.swing.JMenuItem();
-			ivjMniChangeLanguage.setName("MniChangeLanguage");
-			ivjMniChangeLanguage.setText("Language ...");
-			// user code begin {1}
-			// ivjMniChangeLanguage.setText(CommonUserAccess.getMniHelpText());
-			// user code end
-		} catch (java.lang.Throwable ivjExc) {
-			// user code begin {2}
-			// user code end
-			handleException(ivjExc);
-		}
-	}
-	return ivjMniChangeLanguage;
-}
 /**
  * Return the JMenuItem2 property value.
  * @return javax.swing.JMenuItem
@@ -2444,7 +2417,6 @@ private javax.swing.JMenu getMnuHelp() {
 			ivjMnuHelp.setName("MnuHelp");
 			ivjMnuHelp.setText("?");
 			ivjMnuHelp.add(getMniHelp());
-			ivjMnuHelp.add(getMniChangeLanguage());
 			ivjMnuHelp.add(getJSeparator4());
 			ivjMnuHelp.add(getMniAbout());
 			// user code begin {1}
@@ -3100,7 +3072,6 @@ private void initConnections() throws java.lang.Exception {
 	getMniFileOpen().addActionListener(ivjEventHandler);
 	getMniNewFile().addActionListener(ivjEventHandler);
 	getMniExit().addActionListener(ivjEventHandler);
-	getMniChangeLanguage().addActionListener(ivjEventHandler);
 // removed because of added JavaHelp
 //	getMniHelp().addActionListener(ivjEventHandler);
 	getMniPrint().addActionListener(ivjEventHandler);
@@ -3303,7 +3274,8 @@ public static void main(java.lang.String[] args) {
 	try {
 		Tracer.start(args);
 
-		// ce2004-06-23 don't change default Locale!!! use (existing) system administration tool!
+        // 2021-08-02 don't change default Locale!!! use (existing) system administration tool!
+		//   because any static initialized things will not change, if you do Locale.setDefault() 
 		//Locale.setDefault(new Locale(settings.getLanguage(), settings.getCountry()));
 		//Tracer.getInstance().runtimeInfo("Locale might have changed to: " + java.util.Locale.getDefault().toString());
 		
@@ -3316,7 +3288,6 @@ public static void main(java.lang.String[] args) {
 		// initialize language of model-element-names to the language of the user interface
 		ch.ehi.basics.types.NlsString.setDefaultLanguage(getSettings().getLanguage());
 
-		Locale.setDefault(new Locale(getSettings().getLanguage()));
 		showSplashScreen(new Dimension(450, 400), IMAGE_PATH + "splash.gif");//$NON-NLS-1$
 
 		instance = new LauncherView();
